--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://chiaka1996.github.io/covid-19",
+  "homepage": "http://chiaka1996.github.io/covid19-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
